fix dark mode search bar style

--- a/public/assets/sass/layout/topbar/_topbar_theme.scss
+++ b/public/assets/sass/layout/topbar/_topbar_theme.scss
@@ -69,6 +69,42 @@
                         }
                     }
                 }
+
+                .layout-topbar-item {
+                    &.layout-search-item {
+                        .layout-search-panel {
+                                input {
+                                    background-color: $bodyBgColor;
+                                    color: $textColor;
+
+                                    &:hover {
+                                        background-color: $bodyBgColor;
+                                        color: $textColor;
+                                    }
+                                }
+
+                                .p-inputgroup-addon:first-child,
+                                .p-inputgroup button:first-child,
+                                .p-inputgroup input:first-child {
+                                    background-color: $bodyBgColor;
+                                    color: $textColor;
+                                }
+
+                                .p-inputgroup-addon:last-child,
+                                .p-inputgroup button:last-child,
+                                .p-inputgroup input:last-child {
+                                    background-color: $bodyBgColor;
+                                    color: $textColor;
+                                }
+
+                                .p-inputgroup-addon {
+                                    .p-button-text {
+                                        color: $textColor;
+                                    }
+                                }
+                        }
+                    }
+                }
             }
         }
     }
